# reverse_metaphor

./: .env_example  1000_metaphors.csv  307metaphors.csv  LICENSE  README.md  generate_metaphors.ipynb  making_metaphors_script.ipynb  not_full_metaphors.csv  pyproject.toml  start_rnn.ipynb
