[project]
name = "reverse-metaphor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "llama-index-llms-openai>=0.3.25",
    "llama-index>=0.12.24",
    "openai>=1.66.3",
    "together>=1.4.6",
]
